infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: pt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
      annotations:
        k8s.grafana.com/scrape: "true"
        k8s.grafana.com/metrics.portName: "http"
        k8s.grafana.com/job: "api"
    spec:
      containers:
        - name: api
          image: ghcr.io/dzfranklin/plantopo-api:latest
          ports:
            - name: http
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: http
