infra/db.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: db-stallion.reindeer-neon.ts.net
  name: db-stallion
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName
